// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call custom resolvers: groups 1`] = `
Array [
  Group {
    "id": 1,
    "name": "Administrators",
  },
]
`;

exports[`should call custom resolvers: users 1`] = `
Array [
  User {
    "firstName": "John",
    "groups": Array [
      Group {
        "id": 1,
        "name": "Administrators",
      },
    ],
    "id": 1,
    "lastName": "Doe",
  },
]
`;

exports[`should create the expected entities with foreign builder: groups 1`] = `
Array [
  Group {
    "id": 1,
    "name": "Administrators",
  },
  Group {
    "id": 2,
    "name": "Administrators",
  },
]
`;

exports[`should create the expected entities with foreign builder: users 1`] = `
Array [
  User {
    "firstName": "John",
    "groups": Array [
      Group {
        "id": 2,
        "name": "Administrators",
      },
    ],
    "id": 1,
    "lastName": "Doe",
  },
  User {
    "firstName": "John",
    "groups": Array [
      Group {
        "id": 2,
        "name": "Administrators",
      },
    ],
    "id": 2,
    "lastName": "Doe",
  },
]
`;

exports[`should create the expected entities without a foreign builder: groups 1`] = `
Array [
  Group {
    "id": 1,
    "name": "Administrators",
  },
]
`;

exports[`should create the expected entities without a foreign builder: users 1`] = `
Array [
  User {
    "firstName": "John",
    "groups": Array [
      Group {
        "id": 1,
        "name": "Administrators",
      },
    ],
    "id": 1,
    "lastName": "Doe",
  },
]
`;
